--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 Typer[all]==0.9.0
 rich==13.7.0
-unstructured>=0.16.23,<0.18
+unstructured[pdf]>=0.16.23,<0.18
 pdfplumber==0.10.4
 pdf2image==1.17.0
 spacy>=3.7.4,<3.8
@@ -8,3 +8,4 @@ tiktoken>=0.9.0
 rapidfuzz==3.6.1
 pytest==8.1.1
 ruff==0.3.5
+pikepdf==8.13.0
